# elastic-inference

./: .gitignore  .gitmodules  README.md  pyproject.toml
elastic_serving/: __init__.py  adapters.py  client.py  config.py  miro_runtime.py  miro_tools.py  scheduler.py  tools.py  worker.py
elastic_serving/deep_research_utils/: __init__.py  deep_research_tools.py  prompts.py
elastic_serving/dr_utils/: __init__.py  prompts.py  tools.py
elastic_serving/oss/: browser.py  runtime.py  server.py  vllm_generator.py
envs/oss_env/: pyproject.toml
envs/sft_env/: pyproject.toml
examples/00.deep-research/: README.md  run.sh
scripts/: chat.py  dashboard.py  environment.yml  eval_closedbook.py  eval_generic.py  eval_webshaper.py  generate_trajectories.py  hle_closedbook_120b.slurm  hle_closedbook_20b.slurm  launch_browsecomp_high_effort.slurm  launch_oss_env.slurm  launch_personalfinance.slurm  launch_qwen35_browsecomp.slurm  launch_scheduler.sh  launch_scheduler.slurm  launch_worker.slurm  push_to_hub.py  run_oss.py  serve_qwen35.slurm  serve_qwen35_no_think.slurm  test_load.py
scripts/oss/: README.md  eval_bc.py  launch_scheduler_oss.slurm  run_oss.sh
sft/: convert_drtulu.py  convert_gptoss_trajectories.py  convert_selfplay.py  eval_browsecomp.example.sh  generate_trajectories.py  merge_lora.py  qwen3-8b-sft.example.yaml  qwen35-9b-dr-sft.example.yaml  qwen35-9b-sft.example.yaml  readme.md  reformat_sft_data.py  train.example.sh
sft/data/: dataset_info.json
tests/: test_prefix_caching.py
