[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "elastic-serving"
version = "0.1.0"
description = "Auto-scaling vLLM/SGLang inference on SLURM low-priority resources"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
client = [
    "openai>=1.0.0",
]
miro = [
    "e2b-code-interpreter>=1.6.0",
    "json-repair>=0.39.0",
]
vllm = [
    "vllm>=0.4.0",
]
sglang = [
    "sglang[all]>=0.2.0",
]

[project.scripts]
elastic-serving = "elastic_serving.client:main"

[tool.setuptools.packages.find]
include = ["elastic_serving*"]
